[package]
name = "corgi-sample"
version = "0.1.0"
authors = ["Patrick Song <32438365+patricksongzy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.corgi]
# path = "../corgi"
# features = [ "blas" ]

[dependencies]
rand = "0.8.3"
corgi = { version = "^0.8.4", features = [ "blas" ] }
mnist = "0.4.1"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "bench_dense"
harness = false

